--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Dominic's Portfolio</title>
   </head>
-  <body></body>
+  <body>
+      <img src="Images/profile-pic.jpg" alt="Dominic Profile Picture">
+      <h1>Dominic Mugo</h1>
+      <p>Software Developer and <em>GIS Analyst<em></p>
+        <p>I am a Software Development student with a bias towards Geographic Information Systems development and Web Cartography.</p>
+        <hr>
+        <h3>Education</h3>
+        <ul>
+            <li></li>
+        </ul>
+        <h3>Work Experience</h3>
+        <h3>Hobbies and Skills</h3>
+        <ol>
+            <li>Reading</li>
+            <li>Bike Riding</li>
+
+        </ol>
+
+  </body>
 </html>
