add contact html

--- a/index.html
+++ b/index.html
@@ -5,22 +5,32 @@
     <title>Dominic's Portfolio</title>
   </head>
   <body>
-      <img src="Images/profile-pic.jpg" alt="Dominic Profile Picture">
+      <img src="Images/profile-pic.png" alt="Dominic Profile Picture">
       <h1>Dominic Mugo</h1>
       <p>Software Developer and <em>GIS Analyst<em></p>
         <p>I am a Software Development student with a bias towards Geographic Information Systems development and Web Cartography.</p>
         <hr>
         <h3>Education</h3>
         <ul>
-            <li></li>
+            <li><a href="https://moringaschool.com/">Moringa School</a> - Software Development</li>
+            <li>JKUAT- MSc GIS and Remote Sensing</li>
+            <li>Maseno University - BSc Geography and Natural resources management with IT</li>
         </ul>
         <h3>Work Experience</h3>
+        <ul>
+            <li>UNOPS - GIS and Mapping Assitant</li>
+            <li>KNBS - Cartographer/GIS Technician</li>
+            <li>KFS - GIS Intern</li>
+            <li>EWASCO - GIS Intern</li>
+        </ul>
         <h3>Hobbies and Skills</h3>
         <ol>
             <li>Reading</li>
             <li>Bike Riding</li>
 
         </ol>
+        <h3><a href="contact.html">Contact Me</a></h3>
+
 
   </body>
 </html>
