add favorite icon to the index html file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dominic's Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="icon" href="images/favicon.ico">
   </head>
   <body>
       <img src="Images/profile-pic.png" alt="Dominic Profile Picture">
@@ -10,6 +13,7 @@
       <p>Software Developer and <em>GIS Analyst<em></p>
         <p>I am a Software Development student with a bias towards Geographic Information Systems development and Web Cartography.</p>
         <hr>
+        <h2>About Me</h2>
         <h3>Education</h3>
         <ul>
             <li><a href="https://moringaschool.com/">Moringa School</a> - Software Development</li>
