--- a/contact.html
+++ b/contact.html
@@ -2,22 +2,27 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <h3>My Contact Details</h3>
+    <p>Mwangi Riika Crescent, Ngara, Nairobi</p>
+    <p>Phone: (+254) 712725912</p>
+    <p>Email: njuemugodominic@gmail.com</p>
     <h3>Contact Form</h3>
-    <div class="container">
-        <form action=".">
-            <label for="fullname">Full Name</label>
-            <input type="text" id="fullname" name="fullname" placeholder="Your name...">
 
-            <label for="email">Email Address</label>
-            <input type="text" id="email" name="email" placeholder="Your email...">
+        <form action="mailto:njuemugodominic@gmail.com" method="POST" enctype="text/plain">
+            <label for="fullname">Full Name</label><br>
+            <input type="text" id="fullname" name="yourName" placeholder="Your name..."><br>
 
-            <label for="message">Message</label>
-            <textarea id="message" name="message" placeholder="Your message..."></textarea>
+            <label for="email">Email Address</label><br>
+            <input type="email" id="email" name="yourEmail" placeholder="Your email..."> <br>
+
+            <label for="message">Message</label><br>
+            <textarea id="message" name="yourMessage" rows="10" cols="30" placeholder="Your message..."></textarea><br>
 
             <input type="submit" value="Submit">
         </form>
