add styling to nav bar

--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
     <link rel="icon" href="images/favicon.ico">
   </head>
   <body>
+    <div class= "top-container">
+
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#myprojects">My Projects</a>
+        <a href="#contact">Contact</a>
+      </div>
+
       <img src="Images/profile-pic.png" alt="Dominic Profile Picture">
       <h1>Dominic Mugo</h1>
       <p>Software Developer and <em>GIS Analyst<em></p>
         <p>I am a Software Development student with a bias towards Geographic Information Systems development and Web Cartography.</p>
+    </div>
+
+      
         <hr>
         <h2>About Me</h2>
         <h3>Education</h3>
