--- a/index.html
+++ b/index.html
@@ -9,43 +9,22 @@
   </head>
   <body>
     <div class= "top-container">
-
-      <div class="topnav">
+      <div id="navbar">
         <a class="active" href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#myprojects">My Projects</a>
+        <a href="#projects">Project</a>
         <a href="#contact">Contact</a>
       </div>
-
-      <img src="Images/profile-pic.png" alt="Dominic Profile Picture">
       <h1>Dominic Mugo</h1>
-      <p>Software Developer and <em>GIS Analyst<em></p>
-        <p>I am a Software Development student with a bias towards Geographic Information Systems development and Web Cartography.</p>
+      <p>GIS Analyst and Software Developer</p>
     </div>
 
-      
-        <hr>
-        <h2>About Me</h2>
-        <h3>Education</h3>
-        <ul>
-            <li><a href="https://moringaschool.com/">Moringa School</a> - Software Development</li>
-            <li>JKUAT- MSc GIS and Remote Sensing</li>
-            <li>Maseno University - BSc Geography and Natural resources management with IT</li>
-        </ul>
-        <h3>Work Experience</h3>
-        <ul>
-            <li>UNOPS - GIS and Mapping Assitant</li>
-            <li>KNBS - Cartographer/GIS Technician</li>
-            <li>KFS - GIS Intern</li>
-            <li>EWASCO - GIS Intern</li>
-        </ul>
-        <h3>Hobbies and Skills</h3>
-        <ol>
-            <li>Reading</li>
-            <li>Bike Riding</li>
+    <div class="middle-container">
 
-        </ol>
-        <h3><a href="contact.html">Contact Me</a></h3>
+    </div>
+    <div class="bottom-container">
+
+    </div>
 
 
   </body>
