--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class= "top-container">
+      <img class = "profile" src="images/profile-pic.png" alt="Profile Picture">
       <div id="navbar">
         <a class="active" href="#home">Home</a>
         <a href="#about">About</a>
