add divs to hold the image and text in the div container

--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
   </head>
   <body>
     <div class= "top-container">
-      <img class = "profile" src="images/profile-pic.png" alt="Profile Picture">
       <div id="navbar">
         <a class="active" href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#projects">Project</a>
         <a href="#contact">Contact</a>
       </div>
-      <h1>Dominic Mugo</h1>
-      <p>GIS Analyst and Software Developer</p>
+      <div class="profile-pic">
+        <img class = "pf-img" src="images/profile-pic.png" alt="Profile Picture">
+      </div>
+      <div class = "top-writing">
+        <h1>Dominic Mugo</h1>
+        <p><em>GIS Analyst and Software Developer</em></p>
+      </div>
+
     </div>
 
     <div class="middle-container">
