add divs to the middle container

--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
       </div>
 
     </div>
+    <hr>
 
     <div class="middle-container">
+      <div class="mid-container-About">
+
+      </div>
+      <div class="mid-container-skills">
+
+      </div>
+      <div class="mid-container-hobbies">
+
+      </div>
+
 
     </div>
     <div class="bottom-container">
