add projects to bottom div container

--- a/index.html
+++ b/index.html
@@ -24,22 +24,47 @@
       </div>
 
     </div>
-    <hr>
 
     <div class="middle-container">
-      <div class="mid-container-About">
+      <div class="mid-container-about">
+        <h1>About</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris varius libero sed purus convallis, non molestie augue laoreet. Aenean nisl ante, faucibus consectetur arcu et, fringilla dignissim lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed accumsan quam mauris. Vestibulum quis metus nec mauris pulvinar aliquam vitae nec sem. Sed finibus, quam id semper tempus, magna quam dictum libero, non venenatis nisl orci ac enim. Phasellus congue nunc quam, et facilisis libero eleifend ac.</p>
 
       </div>
-      <div class="mid-container-skills">
+      <div class="skill-hobbies">
+        <div class="skills-row">
+          <h1>Skills</h1>
+          <ol>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>BootStrap</li>
+            <li>JavaScript</li>
+            <li>Cartography</li>
+          </ol>  
 
+        </div>
+        <div class="hobbies-row">
+          <h1>Hobbies</h1>
+        <ol>
+          <li>Reading</li>
+          <li>Travelling</li>
+          <li>Cooking</li>
+        </ol>
+
+
+        </div>
       </div>
-      <div class="mid-container-hobbies">
-
-      </div>
-
-
-    </div>
     <div class="bottom-container">
+      <div class="project-1">
+
+      </div>
+      <div class="project-2">
+
+      </div>
+      <div class="project-3">
+
+      </div>
+
 
     </div>
 
