add project images and description

--- a/index.html
+++ b/index.html
@@ -54,14 +54,24 @@
 
         </div>
       </div>
+      <hr>
     <div class="bottom-container">
       <div class="project-1">
+        <h2>Dams's GIS Dashboard</h2>
+        <img class="dashboard-dams" src="images/dashboard-dam.JPG" alt="dashboard image">
+        <p>Field monitoring of dam's status with an online <a href="https://dnjue.maps.arcgis.com/apps/opsdashboard/index.html#/20fb3fd677344b74b17a5b895a511032">Dashboard</a></p>
 
       </div>
       <div class="project-2">
+        <h2>Covid-19 Dashboard</h2>
+        <img class = "dashboard-covid" src="images/dashboard-covid.JPG" alt="Dashboard Image">
+        <p>Visualizing the impact of covid-19 on company operations</p>
 
       </div>
       <div class="project-3">
+        <h2>An Amazing Website</h2>
+        <img class="codes" src="images/code.png" alt="picture of a piece of code">
+        <p>A very brilliant wenbsite</p>
 
       </div>
 
