add social media buttons to footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dominic's Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="icon" href="images/favicon.ico">
   </head>
@@ -71,14 +72,43 @@
       <div class="project-3">
         <h2>An Amazing Website</h2>
         <img class="codes" src="images/code.png" alt="picture of a piece of code">
-        <p>A very brilliant wenbsite</p>
+        <p>A very brilliant website</p>
 
       </div>
+
+      <hr>
 
 
     </div>
     <div class="footer">
-      
+      <h3>My Contact Details</h3>
+    <p>Mwangi Riika Crescent, Ngara, Nairobi</p>
+    <p>Phone: (+254) 712725912</p>
+    <p>Email: njuemugodominic@gmail.com</p>
+    <h3>Contact Form</h3>
+
+        <form action="mailto:njuemugodominic@gmail.com" method="POST" enctype="text/plain">
+            <label for="fullname">Full Name</label><br>
+            <input type="text" id="fullname" name="yourName" placeholder="Your name..."><br>
+
+            <label for="email">Email Address</label><br>
+            <input type="email" id="email" name="yourEmail" placeholder="Your email..."> <br>
+
+            <label for="message">Message</label><br>
+            <textarea id="message" name="yourMessage" rows="10" cols="30" placeholder="Your message..."></textarea><br>
+
+            <input type="submit" value="Submit">
+        </form>
+
+        <h3>Connect on Social Media</h3>
+        <a href="#" class="fa fa-facebook">Facebook</a>
+        <a href="#" class="fa fa-twitter">Twitter</a>
+        <a href="#" class="fa fa-linkedin">LinkedIn</a>
+
+
+
+
+
     </div>
 
 
