--- a/index.html
+++ b/index.html
@@ -99,18 +99,15 @@
 
             <input type="submit" value="Submit">
         </form>
-
-        <h3>Connect on Social Media</h3>
-        <a href="#" class="fa fa-facebook">Facebook</a>
-        <a href="#" class="fa fa-twitter">Twitter</a>
-        <a href="#" class="fa fa-linkedin">LinkedIn</a>
-
-
-
-
-
     </div>
-
-
+    <div class="social">
+      <p style="padding-top: 20px; font-size: 20px;">Connect on Social Media</p>
+      <ul class="social">
+        <li class="social"><a href="#" class="fa fa-facebook">Facebook</a></li>
+        <li class="social"><a href="#" class="fa fa-twitter">Twitter</a></li>
+        <li class="social"><a href="#" class="fa fa-linkedin">LinkedIn</a></li>
+      </ul>
+      <p style="padding-bottom: 50px;">Developed by Dominic @2020</p>
+    </div>
   </body>
 </html>
