renamee Images directory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dominic's Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/styles.css" type="text/css">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="Images/favicon.ico">
   </head>
   <body>
     <div class= "top-container">
@@ -17,7 +17,7 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="profile-pic">
-        <img class = "pf-img" src="images/profile-pic.png" alt="Profile Picture">
+        <img class = "pf-img" src="Images/profile-pic.png" alt="Profile Picture">
       </div>
       <div class = "top-writing">
         <h1>Dominic Mugo</h1>
@@ -59,19 +59,19 @@
     <div class="bottom-container">
       <div class="project-1">
         <h2>Dams's GIS Dashboard</h2>
-        <img class="dashboard-dams" src="images/dashboard-dam.JPG" alt="dashboard image">
+        <img class="dashboard-dams" src="Images/dashboard-dam.JPG" alt="dashboard image">
         <p>Field monitoring of dam's status with an online <a href="https://dnjue.maps.arcgis.com/apps/opsdashboard/index.html#/20fb3fd677344b74b17a5b895a511032">Dashboard</a></p>
 
       </div>
       <div class="project-2">
         <h2>Covid-19 Dashboard</h2>
-        <img class = "dashboard-covid" src="images/dashboard-covid.JPG" alt="Dashboard Image">
+        <img class = "dashboard-covid" src="Images/dashboard-covid.JPG" alt="Dashboard Image">
         <p>Visualizing the impact of covid-19 on company operations</p>
 
       </div>
       <div class="project-3">
         <h2>An Amazing Website</h2>
-        <img class="codes" src="images/code.png" alt="picture of a piece of code">
+        <img class="codes" src="Images/code.png" alt="picture of a piece of code">
         <p>A very brilliant website</p>
 
       </div>
