edits the about me section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="middle-container">
       <div class="mid-container-about">
         <h1>About</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris varius libero sed purus convallis, non molestie augue laoreet. Aenean nisl ante, faucibus consectetur arcu et, fringilla dignissim lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed accumsan quam mauris. Vestibulum quis metus nec mauris pulvinar aliquam vitae nec sem. Sed finibus, quam id semper tempus, magna quam dictum libero, non venenatis nisl orci ac enim. Phasellus congue nunc quam, et facilisis libero eleifend ac.</p>
+        <p> I am a full stack devloper and a GIS analyst (Analyzing spatial data for patterns to inform decision making)<br> I have a passion for front-end and back-end devlopement. I joined Moringa school to learn web development and software engineering. I can design a website like this one and use git and github for collaboration with other developers. My projects can be found on this website and on github. Looking foward to working with you.</p>
 
       </div>
       <div class="skill-hobbies">
