add the link to project on github pages

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
       </div>
       <div class="project-3">
-        <h2>An Amazing Website</h2>
+        <h2>My First Website</h2>
         <img class="codes" src="Images/code.png" alt="picture of a piece of code">
-        <p>A very brilliant website</p>
+        <p>The first website I made in Moringa. Available on <a href="https://mugodom.github.io/my-first-webpage/">Github Pages</a></p>
 
       </div>
 
