--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="middle-container">
       <div class="mid-container-about">
-        <h1>About</h1>
+        <h1><a name="about">About</h1>
         <p> I am a full stack devloper and a GIS analyst (Analyzing spatial data for patterns to inform decision making)<br> I have a passion for front-end and back-end devlopement. I joined Moringa school to learn web development and software engineering. I can design a website like this one and use git and github for collaboration with other developers. My projects can be found on this website and on github. Looking foward to working with you.</p>
 
       </div>
@@ -57,6 +57,7 @@
       </div>
       <hr>
     <div class="bottom-container">
+      <h2><a name="projects">Projects</h2>
       <div class="project-1">
         <h2>Dams's GIS Dashboard</h2>
         <img class="dashboard-dams" src="Images/dashboard-dam.JPG" alt="dashboard image">
@@ -81,7 +82,7 @@
 
     </div>
     <div class="footer">
-      <h3>My Contact Details</h3>
+      <h3><a name="contact">My Contact Details</h3>
     <p>Mwangi Riika Crescent, Ngara, Nairobi</p>
     <p>Phone: (+254) 712725912</p>
     <p>Email: njuemugodominic@gmail.com</p>
