Change entire html structure

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dominic's Portfolio</title>
+    <title>Dominic | GIS Developer </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Grechen+Fuemen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/styles.css" type="text/css">
     <link rel="icon" href="Images/favicon.ico">
   </head>
@@ -16,22 +19,25 @@
         <a href="#projects">Project</a>
         <a href="#contact">Contact</a>
       </div>
+      <div class="about-me">
       <div class="profile-pic">
-        <img class = "pf-img" src="Images/profile-pic.png" alt="Profile Picture">
+        <img class = "pf-img" src="Images/landing-page-img.jpg" alt="Profile Picture">
       </div>
       <div class = "top-writing">
-        <h1>Dominic Mugo</h1>
-        <p><em>GIS Analyst and Software Developer</em></p>
+        <h1>Hello, I am Dominic Mugo,</h1>
+        <p><em> A GIS Analyst and Software Developer</em></p>
       </div>
-
     </div>
-
-    <div class="middle-container">
       <div class="mid-container-about">
         <h1><a name="about">About</h1>
         <p> I am a full stack devloper and a GIS analyst (Analyzing spatial data for patterns to inform decision making)<br> I have a passion for front-end and back-end devlopement. I joined Moringa school to learn web development and software engineering. I can design a website like this one and use git and github for collaboration with other developers. My projects can be found on this website and on github. Looking foward to working with you.</p>
 
       </div>
+      
+
+    </div>
+
+    <div class="middle-container">
       <div class="skill-hobbies">
         <div class="skills-row">
           <h1>Skills</h1>
