Make changes to index file

--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
       </div>
       <div class="about-me">
       <div class="profile-pic">
-        <img class = "pf-img" src="Images/landing-page-img.jpg" alt="Profile Picture">
+        <img class = "pf-img" src="Images/profile-pic.png" alt="Profile Picture">
       </div>
       <div class = "top-writing">
         <h1>Hello, I am Dominic Mugo,</h1>
         <p><em> A GIS Analyst and Software Developer</em></p>
       </div>
+      <div class="top-image">
+        <img src="Images/map-light-illustrate.png" alt="illustrative photo">
+  
+      </div>
     </div>
+
+
       <div class="mid-container-about">
         <h1><a name="about">About</h1>
         <p> I am a full stack devloper and a GIS analyst (Analyzing spatial data for patterns to inform decision making)<br> I have a passion for front-end and back-end devlopement. I joined Moringa school to learn web development and software engineering. I can design a website like this one and use git and github for collaboration with other developers. My projects can be found on this website and on github. Looking foward to working with you.</p>
-
       </div>
-      
-
     </div>
 
     <div class="middle-container">
